summative.moria.Moria.scala.error
Compilation error:
Moria:7: error: illegal start of simple expression
  while() {
        ^Moria:10: error: ')' expected but '}' found.
} 
^