summative.moria.Moria.scala.code
while(!estFaceMur()) {
  while(!estSurBiscuit()) {
    avance()
  }
  prendBiscuit()
  retourne()
  while() {
    
  }
}